# insightops-copilot-governed-analytics

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: streamlit_app.py
config/: project.json
data/demo/: audit_events.jsonl  manifest.json  report_draft.json
data/demo/marts/: anomaly_results.csv  ingestion_runs.csv  metric_definitions.csv  metric_results.csv  quality_results.csv  quality_summary.csv  report_drafts.csv  schema_mappings.csv  source_files.csv
data/demo/raw/: 2024-07_compras.csv  2024-07_finanzas.csv  2024-07_operaciones.csv  2024-07_ventas.csv  2024-08_compras.csv  2024-08_finanzas.csv  2024-08_operaciones.csv  2024-08_ventas.csv  2024-09_compras.csv  2024-09_finanzas.csv  2024-09_operaciones.csv  2024-09_ventas.csv  2024-10_compras.csv  2024-10_finanzas.csv  2024-10_operaciones.csv  2024-10_ventas.csv  (+80 more)
database/: README.md
docs/: architecture.md  data-quality.md  metrics.md  security.md
evaluations/: questions.json
powerbi/: README.md  measures.dax  power_query.pq
prompts/: system_contract.md
scripts/: run_evaluation.py  run_pipeline.py  run_tests.py
sql/: 01_schema.sql  02_views.sql
src/insightops/: __init__.py  anomalies.py  audit.py  copilot.py  database.py  evaluation.py  generator.py  intake.py  mapping.py  metrics.py  models.py  pipeline.py  quality.py  reporting.py  security.py
tests/: test_anomaly_reporting_evaluation.py  test_intake_mapping.py  test_quality_metrics.py  test_security_copilot.py
(+61 files in other folders)
