[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insightops-copilot"
version = "1.0.0"
description = "Auditable analytics automation, data quality and report copilot for Asteria Services."
requires-python = ">=3.12"
dependencies = [
  "pandas==2.2.3", "numpy==2.1.3", "pydantic==2.10.4",
  "SQLAlchemy==2.0.36", "psycopg[binary]==3.2.3",
  "fastapi==0.115.6", "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20", "streamlit==1.41.1",
  "plotly==5.24.1", "scikit-learn==1.6.0", "openpyxl==3.1.5",
  "chardet==5.2.0"
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "httpx==0.28.1"]

[project.scripts]
insightops = "insightops.pipeline:main"
insightops-eval = "insightops.evaluation:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

